--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "nodemon": "^2.0.22",
-    "uuid": "^9.0.0"
+    "nodemon": "^2.0.22"
   }
 }
